完善行星恒星对象池，框选系统